Fixes z-index and width issues with connect integration on list view

--- a/components/connect/integration/block_collection/index.styl
+++ b/components/connect/integration/block_collection/index.styl
@@ -2,8 +2,10 @@
   position relative
   height 100%
   min-height block_width
+  min-width block_width
   background-color white
   border-radius connect-border-radius
+  z-index 1
 
   &:after
     display block
